@@ -15,6 +15,8 @@ git-annex (4.20131003) UNRELEASED; urgency=low
   * Remove bogus runshell loop check.
   * addurl: Improve message when adding url with wrong size to existing file.
   * Fixed handling of URL keys that have no recorded size.
+  * status: Fix a crash if a temp file went away while its size was
+    being checked for status.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 03 Oct 2013 15:41:24 -0400
 
